# rcppsw

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  Makefile  Makefile.analyze  Makefile.check  Makefile.clang  Makefile.gnu  Makefile.intel  Makefile.mpi  Makefile.optimize  README.md  README.rst  VERSION  build_cmake.yml  compile_commands.json  project-local.cmake  rcppsw  rcppsw-config.cmake
.github/workflows/: build-and-test.yml  ci.yml  pages.yml
cmake/: FindLog4cxx.cmake  config.cmake.in  project-local.cmake
config/: Makefile.in  bootstrap.sh  configure.ac
doc/: Doxyfile
docs/: CONTRIBUTING.md  CXX_DEV_GUIDE.md  Doxyfile.in  GIT_COMMIT_GUIDE.md  ISSUE_GUIDE.md  ISSUE_TEMPLATE.md  Makefile  conf.py  doxy_prepare.sh  index.rst  mainpage.hpp  release-notes.md  requirements.txt
docs/api/: algorithm.rst  common.rst  config.rst  control.rst  ds.rst  er.rst  index.rst  math.rst  metrics.rst  mpl.rst  multiprocess.rst  multithread.rst  namespaces.rst  patterns.rst  types.rst  utils.rst
docs/config/: index.rst
docs/contributing/: index.rst
docs/doxyoutput/: Doxyfile  RCPPSW.tag
include/: cli_base.hpp  er_frmwk.hpp  er_frmwk_mod.hpp  erf_client.hpp  file_parser.hpp  forkable.hpp  ipc.hpp  ipc_queue.hpp  kmeans_algorithm.hpp  kmeans_cluster.hpp  kmeans_cluster_algorithm.hpp  kmeans_cluster_openmp.hpp  kmeans_cluster_pthread.hpp  kmeans_cluster_worker.hpp  kmeans_pthread_cluster.hpp  max_subarray_finder.hpp  mt_queue.hpp  mt_vector.hpp  multidim_point.hpp  shared_queue.hpp  singleton.hpp  threadable.hpp
scripts/: bootstrap.sh  doxy_prepare.sh  ticpp.patch
src/: algorithm.cpp  cli_base.cpp  er_frmwk.cpp  er_frmwk_mod.cpp  er_server.cpp  er_server_mod.cpp  file_parser.cpp  forkable.cpp  threadable.cpp  version.cpp.in
src/abi/: abi.cpp
tests/: algorithm-test.cpp  algorithm-utest.cpp  ct-waveform-utest.cpp  degrees-test.cpp  er_frmwk-test.cpp  er_server-test.cpp  hfsm-test.cpp  math-degrees-utest.cpp  math-radians-utest.cpp  math-range-utest.cpp  math-rng-utest.cpp  math-vector2-utest.cpp  math-vector3-utest.cpp  pfsm-hfsm-utest.cpp  pfsm-simple_fsm-utest.cpp  radians-test.cpp  server-test.cpp  simple_fsm-test.cpp  spatial-euclidean_dist-utest.cpp  tdgraph-test.cpp  types-spatial_dist-utest.cpp  types-timestep-utest.cpp  vector2-test.cpp  vector3-test.cpp  waveform-test.cpp
(+1767 files in other folders)
